--- a/views/post/post-add.ejs
+++ b/views/post/post-add.ejs
@@ -37,7 +37,7 @@
                         <!-- <small id="emailHelp2" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                       </div>
                       <div class="form-group">
-                        <label for="content">User Email </label>
+                        <label for="content">Content </label>
                         <input type="text" class="form-control" id="content" name="content" placeholder="Enter Content">
                         <!-- <small id="emailHelp2" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
                       </div>
